# memo

./: .gitignore  .gitlab-ci.yml  .project.json  README.md  medical_device_library.sysml  memo.manifest.yaml  mkdocs.yml  package.json  pyproject.toml  sysand-lock.toml  syside.toml  sysml_highlight.py
architecture/: memo_arch_risk.sysml  memo_assurance.sysml  memo_behavior.sysml  memo_context.sysml  memo_cybersecurity.sysml  memo_decisions.sysml  memo_functions.sysml  memo_hardware_structure.sysml  memo_logical_interfaces.sysml  memo_logical_structure.sysml  memo_physical_interfaces.sysml  memo_requirements.sysml  memo_risk.sysml  memo_software_structure.sysml
artifacts/: memo_artifact_kinds.sysml
base/: README.md  dimensions.sysml  methodology.sysml  rules.sysml  semantics.sysml
base/stdlib/: time.sysml  (+3 more)
compliance/: memo_artifacts.sysml  memo_change.sysml  memo_document_views.sysml  memo_postmarket.sysml
core/: memo_enumerations.sysml  memo_relationships.sysml
docs/: contributing.md  index.md
manifest/: CHANGELOG.md  IMPACT_NOTE.md  PACKAGE_VERSION.md
methodology/: .project.json
ontology/: memo.package.yaml  memo.rendering.yaml  package.json
profile/: archetypes.yaml  memo.package.yaml  package.json
rules/: closure_rules.sysml  coverage_rules.sysml  cross_layer_rules.sysml  lifecycle_rules.sysml  quantitative_rules.sysml
scripts/: build-kpar.sh  format-sysml.py
src/: medical_device_library.sysml  memo_namespaces.sysml
template/: memo.package.yaml
test/: package.test.mjs
viewpoints/: memo_default_viewpoints.sysml  memo_viewpoint_core.sysml
(+319 files in other folders)
