[project]
name = "memo-ontology-docs"
version = "0.4.4"
description = "Documentation for the MEMO medical engineering modeling ontology"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
